fixed patches on firefox

--- a/style.css
+++ b/style.css
@@ -13,9 +13,10 @@
 h1 {
   font-weight: 800;
   font-style: italic;
-  font-size: 20vh;
+  font-size: 10em;
   color: #ff7d33;
   letter-spacing: 1vw;
+  line-height: 1;
 }
 
 h2 {
@@ -54,6 +55,7 @@ p {
   display: grid;
   grid-template-columns: 2fr 1fr;
   grid-column-gap: 5vw;
+  height: 100vh;
 }
 
 .product-display ul {
@@ -79,6 +81,10 @@ p {
   /* top: -22vh; */
 }
 
+figure {
+  margin: 0;
+}
+
 #Group_1 {
   filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, 0.6));
 }
@@ -86,18 +92,18 @@ p {
 .flex {
   display: flex;
 }
-.right {
-  left: 50vw;
-  top: 14vh;
-}
+
 h4 {
-  margin-top: 2.5em;
+  margin-top: 5em;
 }
 .circle-grid {
+  display: -webkit-flex;
+  display: -moz-box;
   display: flex;
+
   flex-wrap: wrap;
   flex-direction: row;
-  width: 14em;
+  width: 50%;
 }
 .circle {
   width: 3em;
@@ -146,17 +152,15 @@ h4 {
 }
 
 .right {
-  padding-top: 20%;
-  margin-left: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #product-info {
   display: flex;
-
-  top: 66vh;
-  width: 34vw;
-  left: 6vw;
 }
+
 .block-flex {
   margin-right: 4em;
 }
